--- a/Snake/src/main/resources/PlayPage.fxml
+++ b/Snake/src/main/resources/PlayPage.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="my.snake.Controller.PlayPageController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="my.snake.controllers.PlayPageController">
    <children>
          <ImageView fx:id="pauseButton" fitHeight="67.0" fitWidth="52.0" onMouseClicked="#pauseButtonMouseClicked" onMouseEntered="#pauseButtonMouseEntered" onMouseExited="#pauseButtonMouseExited" pickOnBounds="true" preserveRatio="true">
             <image>
