--- a/Snake/src/main/resources/SettingsPage.fxml
+++ b/Snake/src/main/resources/SettingsPage.fxml
@@ -3,18 +3,19 @@
 <?import java.lang.Integer?>
 <?import java.lang.String?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="my.snake.Controller.SettingsPageController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="my.snake.controllers.SettingsPageController">
    <children>
-      <Button fx:id="saveButton" layoutX="418.0" layoutY="463.0" mnemonicParsing="false" onMouseClicked="#saveButtonMouseClicked" onMouseEntered="#saveButtonMouseEntered" onMouseExited="#savebuttonMouseExited" prefHeight="63.0" prefWidth="164.0" text="save" />
-      <Slider fx:id="botsCount" blockIncrement="50.0" layoutX="623.0" layoutY="226.0" max="50.0" prefHeight="26.0" prefWidth="298.0" showTickMarks="true" value="0.0" />
-      <Slider fx:id="countOfFood" layoutX="129.0" layoutY="384.0" max="5000.0" min="1.0" prefHeight="1.0" prefWidth="298.0" value="1.0" />
-      <ChoiceBox fx:id="complicityChoiceBox" layoutX="128.0" layoutY="214.0" prefWidth="150.0" value="NOOB">
+      <Button fx:id="saveButton" layoutX="418.0" layoutY="471.0" mnemonicParsing="false" onMouseClicked="#saveButtonMouseClicked" onMouseEntered="#saveButtonMouseEntered" onMouseExited="#savebuttonMouseExited" prefHeight="63.0" prefWidth="164.0" text="save" />
+      <Slider fx:id="botsCount" blockIncrement="50.0" layoutX="593.0" layoutY="293.0" majorTickUnit="10.0" max="50.0" prefHeight="26.0" prefWidth="298.0" showTickLabels="true" showTickMarks="true" value="0.0" />
+      <Slider fx:id="countOfFood" blockIncrement="44.0" layoutX="593.0" layoutY="174.0" majorTickUnit="17.0" max="70.0" min="1.0" prefHeight="1.0" prefWidth="298.0" showTickLabels="true" showTickMarks="true" value="1.0" />
+      <ChoiceBox fx:id="complicityChoiceBox" layoutX="128.0" layoutY="185.0" prefWidth="150.0" value="NOOB">
          <styleClass>
             <String fx:value="NOOB" />
             <String fx:value="EASY" />
@@ -22,23 +23,23 @@
             <String fx:value="HARD" />
          </styleClass>
       </ChoiceBox>
-      <Label layoutX="128.0" layoutY="154.0" prefHeight="39.0" prefWidth="150.0" text="Complicity">
+      <Label layoutX="128.0" layoutY="129.0" prefHeight="39.0" prefWidth="150.0" text="Complicity">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <Label layoutX="129.0" layoutY="327.0" text="Count of food">
+      <Label layoutX="593.0" layoutY="133.0" text="Count of food">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <Slider fx:id="velocityGrade" layoutX="623.0" layoutY="384.0" max="500.0" min="1.0" prefHeight="250.0" prefWidth="298.0" />
-      <Label layoutX="623.0" layoutY="327.0" prefHeight="30.0" prefWidth="102.0" text="Velocity">
+      <Slider fx:id="velocityGrade" layoutX="594.0" layoutY="403.0" majorTickUnit="50.0" max="500.0" min="100.0" prefHeight="0.0" prefWidth="305.0" showTickLabels="true" showTickMarks="true" />
+      <Label layoutX="594.0" layoutY="359.0" prefHeight="30.0" prefWidth="102.0" text="Velocity">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <ChoiceBox fx:id="fieldSizeChoiceBox" layoutX="356.0" layoutY="213.0" prefHeight="26.0" prefWidth="108.0" value="20">
+      <ChoiceBox fx:id="fieldSizeChoiceBox" layoutX="333.0" layoutY="185.0" prefHeight="26.0" prefWidth="108.0" value="20">
          <styleClass>
             <Integer fx:value="10" />
             <Integer fx:value="20" />
@@ -47,15 +48,28 @@
             <Integer fx:value="100" />
          </styleClass>
       </ChoiceBox>
-      <Label layoutX="356.0" layoutY="159.0" text="Size">
+      <Label layoutX="331.0" layoutY="133.0" text="Field size">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <Label layoutX="623.0" layoutY="163.0" text="Count of bots">
+      <Label layoutX="594.0" layoutY="250.0" text="Count of bots">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
+      <Label layoutX="185.0" layoutY="272.0" text="Add second player">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <CheckBox fx:id="secondPlayerCheckBox" layoutX="128.0" layoutY="274.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="27.0">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </CheckBox>
+      <Label layoutX="131.0" layoutY="317.0" text="The second player will control his snake on WASD" />
+      <Label layoutX="782.0" layoutY="140.0" text="* in percentages" />
+      <Label layoutX="731.0" layoutY="365.0" text="* less speed - more latency" />
    </children>
 </AnchorPane>
