--- a/Snake/src/main/resources/SettingsPage.fxml
+++ b/Snake/src/main/resources/SettingsPage.fxml
@@ -12,7 +12,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="my.snake.controllers.SettingsPageController">
    <children>
-      <Button fx:id="saveButton" layoutX="418.0" layoutY="471.0" mnemonicParsing="false" onMouseClicked="#saveButtonMouseClicked" onMouseEntered="#saveButtonMouseEntered" onMouseExited="#savebuttonMouseExited" prefHeight="63.0" prefWidth="164.0" text="save" />
+      <Button fx:id="saveButton" layoutX="418.0" layoutY="471.0" mnemonicParsing="false" onMouseClicked="#saveButtonMouseClicked"  prefHeight="63.0" prefWidth="164.0" text="save" />
       <Slider fx:id="botsCount" blockIncrement="50.0" layoutX="593.0" layoutY="293.0" majorTickUnit="10.0" max="50.0" prefHeight="26.0" prefWidth="298.0" showTickLabels="true" showTickMarks="true" value="0.0" />
       <Slider fx:id="countOfFood" blockIncrement="44.0" layoutX="593.0" layoutY="174.0" majorTickUnit="17.0" max="70.0" min="1.0" prefHeight="1.0" prefWidth="298.0" showTickLabels="true" showTickMarks="true" value="1.0" />
       <ChoiceBox fx:id="complicityChoiceBox" layoutX="128.0" layoutY="185.0" prefWidth="150.0" value="NOOB">
