--- a/TestTask/src/main/webapp/WEB-INF/views/banners/createBanner.html
+++ b/TestTask/src/main/webapp/WEB-INF/views/banners/createBanner.html
@@ -35,7 +35,7 @@
         </aside>
 
         <section class="content">
-            <form  th:method="post" th:action="@{/bid/banners}" th:object="${banner}">
+            <form  th:method="Post" th:action="@{/bid/banners}" th:object="${banner}">
                 <div class="content__body">
                     <div class="content__form">
                         <div class="content__form-item">
